Memory system redesign and logging update.